# gl_tutengine

./: .gitignore  CMakeLists.txt
code/: CMakeLists.txt  CommonUtils.cpp  CommonUtils.h  Game.cpp  Game.h  Input.cpp  Input.h  MainComponent.cpp  Mesh.cpp  Mesh.h  RenderUtils.cpp  RenderUtils.h  ResourceLoader.cpp  ResourceLoader.h  Shader.cpp  Shader.h  Time.cpp  Time.h  Transform.cpp  Transform.h  Vertex.h  Window.cpp  Window.h  mat4.cpp  mat4.h  oglin.h  update_proj.bat  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h  vectors.h
code/res/: link_res.bat
code/res/shaders/: basic.fs  basic.vs
win/glad/include/glad/: glad.h
win/glad/src/: glad.c
